# song

./: README.md
install/: local_setup.sh  setup.sh
install/urp_cvt_interfaces/share/urp_cvt_interfaces/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/urp_cvt_sampling/lib/urp_cvt_sampling/: cvt_sampler_node  path_planner_node
install/urp_cvt_sampling/share/urp_cvt_sampling/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/: waypoints.txt
src/Meshs/: Surface.stl  Untitled.stl  complex.stl
src/Meshs/nrs_surface/: complex_surface_1.ipt  concave_surface_0.75.ipt  concave_surface_0.75.stl  convex_surface_0.75.ipt  convex_surface_0.75.stl  flat_surface.ipt  non_continuous_surface_1.ipt
src/Meshs/nrs_surface/Compound/: compound_concave_0.75_v0.42.ipt  compound_concave_0_75_v0_42.stl  compound_convex_0.75_v0.42.ipt  compound_convex_0_75_v0_42.stl  compound_flat_0.75_v0.42.ipt  compound_flat_0_75_v0_42.stl  v0.42_only.ipt  v0.42_only_piece1.ipt  v0.42_only_piece1.stl  v0.42_only_piece2.ipt  v0.42_only_piece2.stl  v0.42_only_piece3.ipt  v0.42_only_piece3.stl
src/Meshs/nrs_surface/OldVersions/: compound_convex_0.75_v1.0017.ipt  compound_flat_0.75_v1 - 복사본 (2).0016.ipt  (+3 more)
src/urp_cvt_interfaces/: CMakeLists.txt  package.xml
src/urp_cvt_interfaces/srv/: GenerateCVTSamples.srv
src/urp_cvt_sampling/: package.xml  setup.cfg  setup.py
src/urp_cvt_sampling/launch/: cvt_sampler.launch.py
src/urp_cvt_sampling/urp_cvt_sampling/: cell_decomposition.py  utils.py
(+31 files in other folders)
